# usdc-main-mcp-server

./: .gitignore  Procfile  manifest.yaml  pyproject.toml  requirements.txt
docs/: deployment_guide.md
src/hub/: app.py  main.py  servers.json  utils.py
